# Wolf-or-Not

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  example-.env  pyproject.toml  requirements.txt
images/: info.txt
labelserver/: manage.py  settings.py  urls.py
labelserver/labelserver/: wsgi.py
labelserver/simplelabel/: forms.py  models.py  urls.py
labelserver/simplelabel/migrations/: 0003_auto_20220818_0831.py  0004_alter_image_image.py  0008_alter_class_class_id.py
labelserver/simplelabel/templatetags/: attr_extras.py
simplelabel/: admin.py  forms.py  models.py  urls.py  views.py
simplelabel/management/commands/: removeimages.py  showstatistics.py
simplelabel/migrations/: 0001_initial.py  0002_rename_classes_class.py  0005_class_class_color.py  0010_rename_datase_active_dataset_dataset_active.py  0011_api_keys.py  0018_auto_20230309_2159.py  0019_alter_image_image_duplicate.py  0019_image_image_original_name.py  0020_dataset_dataset_max_polls.py  0021_alter_dataset_dataset_max_polls.py
simplelabel/templates/: base.html
site/: .gitignore
site/labelserver/: asgi.py  settings.py
site/simplelabel/: apps.py  models.py  urls.py  utils.py
static/custom/: styles.css
static/js/: upload_form.js
tools/: .gitignore  README.md  image-downloader.py  manual-detection-video.py
tools/autolabel/: autolabel-to-labels.py  autolabel.py  compare_subimages.py  get_random_images.py
tools/autolabel-eval/: calc_union.py
tools/compare-distributions/: testDist.py
tools/near_duplicates/: detect_near_duplicates.py
(+29 files in other folders)
